added event decline endpoint and functionality allowing user to be notified by mail upon event decline by admin
